trunk/website/css/main.css
/* ... */
#nationalstandards table thead tr:first-child td:first-child {
    border-right: none;
}

.validation-success {
    font-size: 9pt;
    color: gray;
}

.validation-failure {
    font-size: 9pt;
    color: red;
}

/******** =skipNav ********/
#skipNav {
    position: absolute;
    left: -9999px;
    width: 9000px;
    font-size: 1px;
    letter-spacing: -1px;
}

/******** =container ********/
#container {
    margin: 0 auto;
    padding: 0;
    width: 900px;
}

/******** =container-wide ********/ /*
This specialty container is to work around a problem with IE6 and
the translations.php page.  The transltions table goes beyond the
container and it the whole thing gets bumped down beneath the
navbar.  This needs to be bigger than the table, the exact numbers
depend on the table, which may grow in the future.  Also, setting
the width will force the width to be that size, leaving blank space
on the right edge, which is also undesirable.  Find some intermediate
point that will allow for expansion without being obnoxious.

TODO: Right now this is 1 solution for all browsers, isolate this problem for just IE6 if ever we do specalized css files for the different browsers.

There is a very good page talking about his problem with IE6:
   http://www.positioniseverything.net/explorer/expandingboxbug.html
*/
#container-wide {
    margin: 0 auto;
    padding: 0;
    width: 1250px;
}

/******** =header ********/
#header {
    background: url("../images/header_BG.gif") left top repeat-x;
    /*background-color:#2345a1;*/
    height: 127px;
    margin: 0;
    padding: 0;
}

#header a {
    text-decoration: none;
}

#headerContainer {
    height: 127px;
    margin: 0 auto;
    width: 765px;
}

#headerContainer div.images {
    margin: 0;
    padding: 0;
    position: relative;
    top: 0;
}

#headerContainer span {
    margin: 0;
    padding: 0;
}

#headerContainer div.logo {
    width: 242px;
    height: 127px;
    position: absolute;
    top: 0;
    left: 0;
}

#headerContainer div.title {
    width: 400px;
    height: 127px;
    position: absolute;
    top: 0;
    right: 0;
}

#quicksearch {
    font-size: 8pt;
    color: gray;
    position: absolute;
    top: 84px;
    right: 0;
    /* TODO: Create a CSS file for IE and add this to it (does it even work?) */
    /*left: expression(parentNode.offsetWidth - this.offsetWidth + 0 + 'px');*/
}

#quicksearch fieldset {
    margin: 0;
    padding: 0;
    border-style: none;
}

#quicksearch fieldset span {
    color: white;
}

#quicksearch fieldset input {
    background-color: white;
}

/* -------- mainNav -------- */
#headerContainer div.mainNav {
    background: url("../images/mainNavLeftTest_BG.gif") left top no-repeat;
    background-color: #32386f;
    float: right;
    font-size: 13px;
    font-weight: bold;
    position: absolute;
    top: 89px;
    margin-left: 420px;
    padding: 0;
}

#headerContainer div.mainNav ul {
    background: url("../images/mainNavRightTest_BG.gif") right top no-repeat
        ;
    margin: 0;
    padding: 6px 0;
}

#headerContainer div.mainNav ul li {
    display: inline;
    margin: 0;
    padding: 10px;
}

#headerContainer div.mainNav ul li a {
    color: white;
    padding: 0 0 18px 0;
}

#headerContainer div.mainNav ul li a:hover {
    background: url("../images/mainNavArrow.gif") center bottom no-repeat;
    color: #ffa025;
}

#headerContainer div.mainNav ul li.selected a {
    background: url("../images/mainNavArrow.gif") center bottom no-repeat;
    color: #ffa025;
}

div.form_content {
    padding: 0;
    margin: 1ex;
    margin-left: 1em;
    border-style: none;
}

*.field {
    clear: right;
    width: 100%;
    border: 0;
    margin: 0;
    padding: 0.5ex 0 0.5ex 0;
}

*.field *.label {
    width: 25%;
    font-weight: bold;
}

*.field *.label_content {
    clear: right;
    float: right;
    width: 75%;
}

*.field *.label_content input,*.field *.label_content select,*.field *.label_content textarea {
    position: relative;
    top: -1ex;
}

/* For table-based forms */
table.form {
    width: 100%;
}

/*table.form tr td {
width: 100%;
}
*/
table.form p {
    padding: 0;
    margin: 0;
}

table.form tr td {
    width: 70%;
    vertical-align: top;
    padding-top: 0.75ex;
    padding-bottom: 0.75ex;
}

table.form tr td:first-child {
    font-weight: bold;
    width: 30%;
}

table.form tr td input,table.form tr td textarea,table.form tr td select
    {
    position: relative;
    top: -0.5ex;
}

table.form tr td input[type="submit"] {
    margin-top: 1ex;
    float: right;
}

table.form select.auto-width,table.form input.auto-width {
    width: auto;
}

table.form tr td input[type="submit"] {
    width: auto;
}

table.form td.valid {
    color: black;
}

table.form td.invalid {
    color: red;
}

table.form tr.error-message td {
    padding: 0;
}

table.form tr.error-message td p {
    padding: 0;
    margin: 0;
    padding-left: 1ex;
    font-style: italic;
    font-size: 11px;
    color: red;
    position: relative;
    top: -0.5ex;
}

table.form #forgot_password {
    text-align: center;
}

#downloadspeeds {
    padding-left: 2em;
    padding-right: 2em;
    padding-bottom: 2em;
    margin-left: auto;
    margin-right: auto;
}

#downloadspeeds table tr:first-child td,#downloadspeeds table tr td:first-child
    {
    font-weight: bold;
}

.button {
    clear: right;
    float: none;
    padding: 0;
    position: relative;
    margin-left: 1ex;
    margin-right: 1ex;
    margin-top: 1em;
    margin-bottom: 1em;
}

.comments {
    margin-top: 10px;
}

img.image-text {
    position: relative;
    top: 1px;
}

#browsefilter {
    margin: auto;
    padding: 0px 0px 0px 0px;
    border-style: none;
}

#browsefilter table {
    margin: 0;
    padding: 0;
    width: 578px;
}

#browsefilter table,#browsefilter thead,#browsefilter tbody {
    border-style: none;
}

#browsefilter td,#browsefilter tr {
    border-style: none;
    margin: 0;
    padding: 0;
}
/* ... */

